--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ Django==5.2.8
 django-cors-headers==4.9.0
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
+gunicorn==23.0.0
 kombu==5.5.4
 packaging==25.0
 prompt_toolkit==3.0.52
